tests/negative/semantic/structure_forward_reference/input.ci
structure A {
    B b = clone B;
}

structure B {
    int x = 0;
}

void main() {}
